--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,12 +41,11 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'androidx.preference:preference:1.1.0'
+    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.4.0'
 
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
-    //implementation 'com.android.volley:volley'
-
 }
