--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -30,6 +30,10 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
         useIR = true
+    }
+
+    applicationVariants.all { variant ->
+        variant.resValue "string", "versionName", variant.versionName
     }
 }
 
@@ -53,10 +57,11 @@ dependencies {
     implementation 'com.intuit.fuzzymatcher:fuzzy-matcher:1.0.4'
     implementation 'me.xdrop:fuzzywuzzy:1.2.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    implementation 'com.google.firebase:firebase-analytics:18.0.0'
+    implementation 'com.google.firebase:firebase-analytics:18.0.1'
     implementation 'com.google.firebase:firebase-crashlytics:17.3.0'
-    implementation 'com.google.firebase:firebase-core:18.0.0'
-    implementation 'androidx.browser:browser:1.2.0'
+    implementation 'com.google.firebase:firebase-core:18.0.1'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
+    implementation 'androidx.browser:browser:1.3.0'
 
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
